--- a/style.css
+++ b/style.css
@@ -83,6 +83,33 @@ body{
     margin: 20px 0;
 }
 
+.food_card_image_container{
+    width: 100%;
+}
+
+.food_image{
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+    
+}
+
+.food_card{
+    background-color: #fff;
+    border-radius: 8px;
+    margin-bottom: 15px;
+}
+
+.food_card_description{
+    padding: 15px;
+}
+
+.explore_menu_text{
+    font-size: 30px;
+    margin-top: 50px;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
 /*media query for tablet*/
 @media (min-width:768px)
 {
@@ -97,6 +124,48 @@ body{
         align-items: center;
         margin-top: 20px;
     }
+
+    .explore_menu_lists{
+        display: flex;
+        gap: 15px;
+        margin: 40px;
+        padding: 0 30px;
+    }
+
+    #pizza_card{
+        margin-top: -20px;
+        margin-bottom: 30px;
+    }
+
+    .explore_menue_view_more{
+        display: flex;
+        justify-content: center;
+    }
+
+    .explore_menu_container{
+        position: relative;
+        margin-top: 30px;
+    }
+
+    .explore_menu_gradient_bg{
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+
+        background-image: linear-gradient(
+        to right,
+        #ff512f 0%,
+        #dd2476 51%,
+        #ff512f 100%
+    );
+        
+        z-index: -3;
+        transform: skewY(-5deg);
+
+    }
 }
 
 /*media query for laptop*/
@@ -104,7 +173,6 @@ body{
 {
     .navbar_brand{
         width: 150px;
-
     }
 
     .button_primary{
@@ -121,6 +189,14 @@ body{
     }
 
     .hero_text{
+        font-size: 50px;
+    }
+
+    .explore_menu_lists{
+        gap: 40px;
+    }
+
+    .explore_menu_text{
         font-size: 50px;
     }
 
