--- a/style.css
+++ b/style.css
@@ -110,6 +110,49 @@ body{
     text-align: center;
 }
 
+.restaurant_images_container{
+    width: 100%;
+}
+
+.restaurant_images_row_one, 
+.restaurant_images_row_two{
+    width: 100%;
+    display: flex;
+    gap: 3px;
+}
+
+.restaurant_image_1,
+.restaurant_image_4{
+    width: 100%;
+    height: 120px;
+}
+
+.restaurant_image_2,
+.restaurant_image_3{
+    width: 120%;
+    height: 200px;
+}
+
+.restaurant_1,
+.restaurant_2,
+.restaurant_3,
+.restaurant_4{
+    width: 100%;
+    height: 100%;
+}
+
+.restaurant_images_row_one{
+    align-items: baseline;
+    margin-bottom: 3px;
+}
+
+.restaurant_text{
+    font-size: 30px;
+    margin-top: 50px;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
 /*media query for tablet*/
 @media (min-width:768px)
 {
@@ -165,6 +208,16 @@ body{
         z-index: -3;
         transform: skewY(-5deg);
 
+    }
+
+    .restaurant_container{
+        display: flex;
+        align-items: center;
+    }
+
+    .restaurant_text{
+        width: 100%;
+        font-size: 40px;
     }
 }
 
