--- a/style.css
+++ b/style.css
@@ -153,6 +153,118 @@ body{
     text-align: center;
 }
 
+.update_container{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.update_text{
+    padding: 10px 0;
+    font-size: 30px;
+    width: 100%;
+}
+
+.update_email_input{
+    background-color: rgb(230, 214, 216);
+    padding: 4px 4px;
+    border: 1px solid rgb(209, 100, 100);
+    border-radius: 5px;
+}
+
+.update_email{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.update_get{
+    background-image: linear-gradient(
+        to right,
+        #ff512f 0%,
+        #dd2476 51%,
+        #ff512f 100%
+    );
+
+    color: #fff;
+    border: none;
+    padding: 12px;
+    border-radius: 6px;
+    cursor: pointer;
+
+
+}
+
+.qoute_container{
+    position: relative;
+    margin-top: 4rem;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 200px;
+    width: 100%;
+    border-radius: 13px;
+    background: 
+    url(https://images.unsplash.com/photo-1522336572468-97b06e8ef143?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=755&q=80) 
+    center center / cover no-repeat;
+}
+
+.quote_image_overlay {
+    position: absolute;
+    height: 200px;
+    width: 100%;
+    border-radius: 13px;
+    background-color: #aec5d4;
+    opacity: 40%;
+}
+
+.quote_image_text {
+    color: #fff;
+    z-index: 3;
+    margin: 0 1rem;
+    text-align: center;
+    padding-left: 5px 5px;
+}
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+footer {
+    margin-top: 40px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 1rem 1rem 0 0;
+    background-image: linear-gradient( to right, #ff512f 0%, #dd2476 51%, #ff512f 100% );
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+ul li{
+    color: #fff;
+}
+
+
+/*------------------------------------------------------------------------------------------------------------------------------------*/
 /*media query for tablet*/
 @media (min-width:768px)
 {
@@ -219,6 +331,62 @@ body{
         width: 100%;
         font-size: 40px;
     }
+
+    .update_container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 50px 200px;
+    }
+
+    .update_email{
+        max-width: 100%;
+        display: flex;
+        gap: 20px;
+    }
+
+    .update_email_input{
+        max-width: 100%;
+    }
+
+    .update_text{
+        margin-left: 40px;
+        font-size: 40px;
+    }
+
+    .quote__container {
+        display: flex;
+        height: 400px;
+        width: 100%;
+    }
+
+    .quote_image_overlay {
+        position: absolute;
+        height: 400px;
+        width: 100%;
+        border-radius: 13px;
+        background-color: #0a4065;
+        opacity: 40%;
+    }
+
+    .quote_image_text {
+        width: 90%;
+        color:white;
+        z-index: 3;
+        margin: 0 1rem;
+        text-align: center;
+        font-size: 1rem;
+        font-weight: bolder;
+        line-height: 1.0;
+    }
+
+    footer {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 }
 
 /*media query for laptop*/
@@ -252,6 +420,49 @@ body{
     .explore_menu_text{
         font-size: 50px;
     }
+
+    .update_text{
+        margin-left: 70px;
+        font-size: 40px;
+        font-weight:700;
+        max-width: 100%;
+    }
+
+    .update_email{
+        max-width: 100%;
+        display: flex;
+        gap: 20px;
+    }
+
+    .update_email_input{
+        max-width: 100%;
+        padding-right: 100px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .update_get{
+        background-image: linear-gradient(
+            to right,
+            #ff512f 0%,
+            #dd2476 51%,
+            #ff512f 100%
+        );
+    
+        color: #fff;
+        border: none;
+        padding: 12px;
+        border-radius: 6px;
+        cursor: pointer;
+    
+    
+    }
+
+    .qoute_container{
+        height: 45vh;
+        width: 100%;
+    }
+    
 
 }
 
